Add cursor change to pointer when hover over anchors

--- a/build-your-own-cheatsheet-codecademy/style.css
+++ b/build-your-own-cheatsheet-codecademy/style.css
@@ -39,9 +39,11 @@ em {
 a {
     color: blue;
     text-decoration: underline;
+    cursor: pointer;
 }
 
 a:hover {
     color: orange;
     text-decoration: none;
+    cursor: pointer;
 }
