--- a/build-your-own-cheatsheet-codecademy/style.css
+++ b/build-your-own-cheatsheet-codecademy/style.css
@@ -49,7 +49,7 @@ a:hover {
     cursor: pointer;
 }
 
-code1 {
+.code1 {
     color: #b4d353
 }
 
@@ -57,7 +57,6 @@ code1 {
     color: #83fff5
 }
 
-,code3 {
+.code3 {
     color: #ff8973
 }
-
